[gd_scene load_steps=13 format=3 uid="uid://cci8unaglttnx"]

[ext_resource type="Script" path="res://entities/enemy/robotic_enemy.gd" id="1_q8t86"]
[ext_resource type="SpriteFrames" uid="uid://ci8byp1vs5yhv" path="res://entities/enemy/resources/Enemy1.tres" id="2_3s8hw"]
[ext_resource type="PackedScene" uid="uid://derfka1l765vi" path="res://entities/effects/bullets/bullet.tscn" id="2_8dk6a"]
[ext_resource type="Script" path="res://finite_state_machine/NPCFiniteStateMachine.gd" id="3_7hcwr"]
[ext_resource type="Script" path="res://entities/enemy/AttackState.gd" id="4_vv6tm"]
[ext_resource type="Script" path="res://entities/enemy/UnactivatedState.gd" id="5_w8lqy"]
[ext_resource type="Script" path="res://entities/enemy/WaitingState.gd" id="6_vog72"]
[ext_resource type="Script" path="res://entities/enemy/DeactivatedState.gd" id="7_ix0ra"]
[ext_resource type="Script" path="res://entities/enemy/DeathState.gd" id="8_mp06n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h040c"]
size = Vector2(59, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5685"]
size = Vector2(508, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ue4u"]
size = Vector2(52, 86)

[node name="RoboticEnemy" type="CharacterBody2D"]
collision_layer = 256
script = ExtResource("1_q8t86")
animations = ExtResource("2_3s8hw")
projectile = ExtResource("2_8dk6a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(43, -50)
scale = Vector2(1.78125, 1.67187)
sprite_frames = ExtResource("2_3s8hw")
animation = &"death"
offset = Vector2(2.08165e-12, 2.08165e-12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.5, -13)
shape = SubResource("RectangleShape2D_h040c")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_7hcwr")
state = NodePath("UnactivatedState")

[node name="AttackState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("4_vv6tm")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="UnactivatedState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("5_w8lqy")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="WaitingState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("6_vog72")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="DeactivatedState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("7_ix0ra")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="DeathState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator")]
script = ExtResource("8_mp06n")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(5, 10)
shape = SubResource("RectangleShape2D_b5685")

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2(8, -12)
shape = SubResource("RectangleShape2D_6ue4u")

[node name="GunRotation" type="Node2D" parent="."]
position = Vector2(16, -26)

[node name="BulletSpawn" type="Node2D" parent="GunRotation"]
position = Vector2(38, 1)

[node name="Firing" type="Timer" parent="."]
wait_time = 0.504

[connection signal="animation_finished" from="AnimatedSprite2D" to="FiniteStateMachine/DeathState" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
